v0.9 lasted_update 관련 수정